--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3628,6 +3628,77 @@ Lorsque le sujet est indéterminé, il est introduit par <em>ⲟⲩⲟⲛ</em> d
     <p class="footnote">3. Gen. 3, 3.</p>
     <p class="footnote">4. Mt. 2, 13.</p>
     <p class="footnote">5. Deut. 28, 24.</p>
+    <p><em>ϣⲁⲧⲉ ⲡⲉⲙⲃⲟⲛ ⲛⲉⲙ ⲡϫⲱⲛⲧ ⲙ̀ⲡⲉⲕⲥⲟⲛ ⲕⲟⲧϥ ⲉⲃⲟⲗ ϩⲁⲣⲟⲕ</em> «jusqu'à ce que la colère et la fureur de ton frère se détourne de toi»<sup class="footnote">1</sup>.</p>
+    <p>4. Le subjonctif s'emploie souvent pour éviter la répétition du même temps; dans ce cas, la dépendance n'est qu'apparente, les propositions sont en réalité coordonnées. En général elles se suivent sans conjonction, quelquefois elles sont unies par <em>ⲟⲩⲟϩ</em>. Dans la traduction, le subjonctif se met au même temps que le verbe qui précède.</p>
+    <p>Cet emploi du subjonctif peut avoir lieu à tous les temps et à tous les modes.
+A l'indicatif présent:</p>
+    <p><em>ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲣⲱⲙⲓ ⲉϥϩⲓⲟⲩⲓ ⲙ̀ⲡⲉϥϫⲣⲟϫ … ⲟⲩⲟϩ ⲛ̀ⲧⲉϥⲛ̀ⲕⲟⲧ</em> «comme un homme qui jette sa semence … et s'endort»<sup class="footnote">2</sup>.</p>
+    <p>Au présent d'habitude:</p>
+    <p><em>ϣⲁϥⲓ̀ ⲛ̀ϫⲉ ⲡⲥⲁⲧⲁⲛⲁⲥ ⲟⲩⲟϩ ⲛ̀ⲧⲉϥⲱⲗⲓ ⲙ̀ⲡⲓⲥⲁϫⲓ</em> «Satan vient et enlève la parole»<sup class="footnote">3</sup>.</p>
+    <p>Au futur:</p>
+    <p><em>ϯⲛⲁϭⲟϫⲓ ⲛ̀ⲧⲁⲧⲁϩⲟ ⲛ̀ⲧⲁⲫⲱϣ ⲛ̀ⲧⲁϣⲱⲗ</em> « je poursuivrai, j'atteindrai, je diviserai, je pillerai»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲉⲩⲉⲑⲉⲗⲏⲗ ⲛ̀ⲧⲟⲩⲟⲩⲛⲟϥ ⲛ̀ϫⲉ ⲛⲏ ⲉⲑⲟⲩⲱϣ ⲛ̀ⲧⲁⲙⲉⲑⲙⲏⲓ</em> «ils se réjouiront et exulteront, ceux qui veulent ma justice»<sup class="footnote">5</sup>.</p>
+    <p class="footnote">1. Gen. 27, 45.</p>
+    <p class="footnote">2. Mc. 4, 26.</p>
+    <p class="footnote">3. Mc. 4, 15.</p>
+    <p class="footnote">4. Ex. 15, 9.</p>
+    <p class="footnote">5. Ps. 34, 27.</p>
+    <p>Au conditionnel:</p>
+    <p><em>ⲉϣⲱⲡ ⲁⲕϣⲁⲛⲓ̀ ⲉ ⲧⲁⲫⲩⲗⲏ ⲟⲩⲟϩ ⲛ̀ⲧⲟⲩϣⲧⲉⲙϯ ⲛⲁⲕ ⲉⲕⲉϣⲱⲡⲓ ⲉⲕⲧⲟⲩⲃⲏⲟⲩⲧ ⲉⲃⲟⲗ ϩⲁ ⲡⲁⲁⲛⲁϣ</em> «si tu vas vers ma tribu et qu'ils ne te donnent pas, tu seras libéré de mon serment»<sup class="footnote">1</sup>.</p>
+    <p>A l'impératif:</p>
+    <p><em>ⲙ̀ⲡⲉⲣϩⲱⲗ ⲛ̀ⲧⲉⲕⲭⲁⲧ</em> «ne pars pas, ne m'abandonne pas»<sup class="footnote">2</sup>.</p>
+    <p>A l'optatif:</p>
+    <p><em>ⲙⲁⲣⲟⲩⲟⲩⲛⲟϥ ⲛ̀ⲧⲟⲩⲑⲉⲗⲏⲗ ⲛ̀ϫⲉ ϩⲁⲛⲉⲑⲛⲟⲥ</em> «que les nations exultent et se réjouissent»<sup class="footnote">3</sup>.</p>
+    <p>Après l'infinitif avec <em>ⲉ</em>, <em>ⲉⲑⲣⲉ</em>:</p>
+    <p><em>ⲁϥⲭⲁϥ ϧⲉⲛ ⲡⲓⲡⲁⲣⲁⲇⲓⲥⲟⲥ ⲉⲑⲣⲉϥⲉⲣϩⲱⲃ ⲟⲩⲟϩ ⲛ̀ⲧⲉϥⲁⲣⲉϩ ⲉⲣⲟϥ</em> «il le plaça dans le paradis pour y travailler et le garder<sup class="footnote">4</sup>.</p>
+    <p>Après une proposition relative:</p>
+    <p><em>ⲫⲏ ⲉⲑⲛⲁⲩ ⲉⲡϣⲏⲣⲓ ⲟⲩⲟϩ ⲛ̀ⲧⲉϥⲛⲁϩϯ ⲉⲣⲟϥ</em> «celui qui voit le Fils et croit en lui»<sup class="footnote">5</sup>.</p>
+    <p>III. Optatif.</p>
+    <p>Il est formé de <em>-ⲣⲉ</em> et de l'impératif <em>ⲙⲁ-</em>: <em>ⲙⲁⲣⲉ-</em>, <em>ⲙⲁⲣ⸗</em> «donne, accorde».</p>
+    <p>Ce temps exprime le souhait, le désir, l'exhortation: <em>ⲙⲁⲣⲉ ⲡⲓⲕⲁϩⲓ ⲓⲛⲓ ⲉⲃⲟⲗ ⲛ̀ϩⲁⲛⲥⲙⲉϩ ⲛ̀ⲥⲓⲙ</em> «que la terre produise des herbes verdoyantes»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲡⲉⲧⲉϩⲛⲁⲕ ⲙⲁⲣⲉϥϣⲱⲡⲓ</em> «que ta volonté soit faite»<sup class="footnote">7</sup>.</p>
+    <p><em>ⲙⲁⲣⲉⲛϣⲉⲡϩⲙⲟⲧ ⲛ̀ⲧⲟⲧϥ ⲙ̀ⲫϯ</em> «remercions Dieu»<sup class="footnote">8</sup>.</p>
+    <p class="footnote">1. Gen. 24, 41.</p>
+    <p class="footnote">2. Kef. 352.</p>
+    <p class="footnote">3. Ps. 66, 4.</p>
+    <p class="footnote">4. Gen. 2, 15.</p>
+    <p class="footnote">5. Jean 6, 40.</p>
+    <p class="footnote">6. Gen. 1, 11.</p>
+    <p class="footnote">7. Mt. 6, 10.</p>
+    <p class="footnote">8. Missel.</p>
+    <p>Il reste en copte une seule forme d'optatif sans infinitif: <em>ⲙⲁⲣⲟⲛ</em> «allons».</p>
+    <p>IV. Impératif.</p>
+    <p>I. Pour le plus grand nombre des verbes l'infinitif sert d'impératif sing. et plur.:</p>
+    <p><em>ⲙⲟϣⲓ ⲛ̀ⲥⲱⲓ</em> «suis-moi»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲙⲉⲛⲣⲉ ⲡϭⲟⲓⲥ</em> «aime le Seigneur».</p>
+    <p><em>ⲛⲁϩⲙⲉⲧ</em> «délivre-moi»<sup class="footnote">2</sup>.</p>
+    <p>2. Quelques verbes prennent un <em>ⲁ</em> devant l'infinitif:</p>
+    <p><em>ⲁⲛⲁⲩ</em> «vois»,</p>
+    <p><em>ⲁⲟⲩⲱⲙ</em> «mange»,</p>
+    <p><em>ⲁϫⲱ ⲁϫⲉ- ⲁϫⲟ⸗</em>, <em>ⲁϫⲟⲥ</em> «dis».</p>
+    <p>3. Les trois verbes <em>ⲓⲛⲓ</em> <em>ⲓⲣⲓ</em> <em>ⲱⲗⲓ</em> forment ainsi leur impératif:</p>
+    <table>
+      <tr>
+        <td><em>ⲁⲛⲓⲟⲩⲓ</em></td><td><em>ⲁⲛⲓ-</em></td><td><em>ⲁⲛⲓⲧ⸗</em></td><td>«porte»,</td>
+      </tr>
+      <tr>
+        <td><em>ⲁⲣⲓⲟⲩⲓ</em></td><td><em>ⲁⲣⲓ-</em></td><td><em>ⲁⲣⲓⲧ⸗</em></td><td>«fais»,</td>
+      </tr>
+      <tr>
+        <td><em>ⲁⲗⲓⲟⲩⲓ</em></td><td><em>ⲁⲗⲓ-</em></td><td><em>ⲁⲗⲓⲧ⸗</em></td><td>«ôte».</td>
+      </tr>
+    </table>
+    <p>4. Autres impératifs:</p>
+    <p><em>ⲁⲙⲟⲩ</em>, <i>fém.</i> <em>ⲁⲙⲏ</em>, <i>pl.</i> <em>ⲁⲙⲱⲓⲛⲓ</em> «viens, venez»,</p>
+    <p><em>ⲁⲩⲓⲥ</em> «donne»: <em>ⲁⲩⲓⲥ ⲧⲉⲕϫⲓϫ</em> «donne ta main»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲙⲟⲓ ⲙⲁ- ⲙⲏⲓ⸗</em> «accorde, donne» sert d'impératif à <em>ϯ</em>.</p>
+    <p><em>ⲙⲟ</em>, <i>fém.</i> <em>ⲙⲉ</em> <i>pl.</i> <em>ⲙⲱⲓⲛⲓ</em> «prends, prenez».</p>
+    <p>5. <em>ⲙⲁ-</em> forme l'impératif de tous les verbes composés de <em>ϯ</em> (230) et de tous les verbes causatifs formés de <em>ⲧ</em>.</p>
+    <p><em>ⲧⲟⲩⲃⲟ</em> «purifier», <i>impér.</i> <em>ⲙⲁⲧⲟⲩⲃⲟ</em>;</p>
+    <p><em>ⲑⲉⲃⲓⲟ</em> «abaisser», <i>impér.</i> <em>ⲙⲁⲑⲉⲃⲓⲟ</em>.</p>
+    <p class="footnote">1. Jean 1, 44.</p>
+    <p class="footnote">2. Ms. 124.</p>
+    <p class="footnote">3. Jean 20, 27.</p>
   </div>
 </div>
 	</body>
