--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3699,6 +3699,41 @@ A l'indicatif présent:</p>
     <p class="footnote">1. Jean 1, 44.</p>
     <p class="footnote">2. Ms. 124.</p>
     <p class="footnote">3. Jean 20, 27.</p>
+    <p>On a aussi: <em>ⲙⲁϣⲉ ⲛⲁⲕ</em> «va-t'en», <em>ⲙⲁϣⲉ ⲛⲱⲧⲉⲛ</em> «allez-vous en».</p>
+    <p>6. La négation de l'impératif s'obtient en plaçant:</p>
+    <p><em>ⲙ̀ⲡⲉⲣ-</em> devant l'infinitif <i>simple</i> et <em>ⲙ̀ⲡⲉⲛ-</em> devant l'infinitif <i>causatif</i>:</p>
+    <p><em>ⲙ̀ⲡⲉⲣⲉⲣϩⲟϯ</em> «ne craignez pas».</p>
+    <p><em>ⲙ̀ⲡⲉⲛⲑⲣⲉ ϩⲗⲓ ⲉⲙⲓ</em> «ne le fais savoir à personne»<sup class="footnote">1</sup>.</p>
+    <p><em>ϯϯϩⲟ ⲉⲣⲟⲕ ⲡⲁⲓⲱⲧ ⲙ̀ⲡⲉⲣϩⲱⲗ</em> «je t'en prie, mon père, ne pars pas»<sup class="footnote">2</sup>.</p>
+    <p>7. Lorsqu'il y a plusieurs impératifs à la suite, le premier verbe seul a la forme de l'impératif, les autres prennent l'auxiliaire du subjonctif (252); à moins qu'ils ne soient complètement indépendants les uns des autres, comme dans l'exemple: <em>ⲡϭⲟⲓⲥ ⲥⲱⲧⲉⲙ ⲉⲧⲁⲡⲣⲟⲥⲉⲩⲭⲏ ϭⲓⲥⲙⲏ ⲉⲡⲁϯϩⲟ</em> «Seigneur, écoute ma prière, prête l'oreille à ma demande»<sup class="footnote">3</sup>.</p>
+    <p>V. Infinitif.</p>
+    <p>1. Formes.</p>
+    <p>Il y a deux sortes d'infinitif: l'infinitif <i>simple</i> <em>ⲃⲱⲗ</em> «délier» et l'infinitif <i>causatif</i> <em>ⲑⲣⲉ- ⲃⲱⲗ</em> «faire délier»:</p>
+    <table>
+      <tr>
+        <th>Sg.</th><th></th><th>Pl.</th><th></th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ⲑⲣⲓ</em></td><td>1.</td><td><em>ⲑⲣⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ⲑⲣⲉⲕ</em></td><td>2.</td><td><em>ⲑⲣⲉⲧⲉⲛ</em>, <em>ⲑⲣⲉⲧⲉⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲑⲣⲉ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ⲑⲣⲉϥ</em></td><td>3.</td><td><em>ⲑⲣⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲑⲣⲉⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p>Devant un nom: <em>ⲑⲣⲟ ⲑⲣⲉ-</em>.</p>
+    <p><em>ⲑⲣⲟ</em> (<em>ⲧ</em> + <em>ⲓⲣⲓ</em> 23, 227) est le causatif du verbe <em>ⲓⲣⲓ</em> «faire».</p>
+    <p class="footnote">1. Mt. 9, 30.</p>
+    <p class="footnote">2. Kef. 352.</p>
+    <p class="footnote">3. Ps. 142, 1.</p>
   </div>
 </div>
 	</body>
