--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3734,6 +3734,51 @@ A l'indicatif présent:</p>
     <p class="footnote">1. Mt. 9, 30.</p>
     <p class="footnote">2. Kef. 352.</p>
     <p class="footnote">3. Ps. 142, 1.</p>
+    <p>L'infinitif causatif peut s'employer partout où s'emploie l'infinitif simple:</p>
+    <p><em>ⲥⲉⲑⲣⲟ ⲛ̀ⲑⲃⲁⲕⲓ ⲙ̀ⲫϯ ⲟⲩⲛⲟϥ</em> «ils font se réjouir la cité de Dieu»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁ ⲡϭⲟⲓⲥ ⲑⲣⲉ ⲡϩⲏⲧ ⲙ̀ⲫⲁⲣⲁⲱ ⲛ̀ϣⲟⲧ</em> «le Seigneur endurcit le cœur de Pharaon»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲛⲓⲁⲥⲉⲃⲏⲥ ϣⲁⲣⲉ ⲫⲛⲟⲃⲓ ⲑⲣⲟⲩⲧⲁⲕⲟ</em> «le péché cause la perte des impies»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲉⲓⲉⲑⲣⲉϥⲁϣⲁⲓ</em> «je le ferai se multiplier»<sup class="footnote">4</sup>.</p>
+    <p>Pour son emploi avec <em>ⲉ</em>, voir 263, 264; avec <em>ϫⲓⲛ</em>, voir 266 et suivants.</p>
+    <p>La négation à l'infinitif se fait au moyen de <em>ϣⲧⲉⲙ</em>: <em>ϣⲧⲉⲙⲃⲱⲗ</em> «ne pas délier», <em>ϣⲧⲉⲙⲑⲣⲉ- ⲃⲱⲗ</em> «ne pas faire délier». Cette forme négative ne s'emploie dans la conjugaison qu'à deux temps, au conditionnel et au subjonctif. Aux autres temps, la négation est exprimée par des auxiliaires ou des adverbes. Mais hors de la conjugaison, elle peut remplir les mêmes fonctions que l'infinitif affirmatif:</p>
+    <p><em>ⲱⲣⲕ ⲛⲏⲓ ⲙ̀ⲫⲛⲟⲩϯ ⲉϣⲧⲉⲙϭⲓⲧ ⲛ̀ϫⲟⲛⲥ</em> «jure-moi par Dieu de ne pas m'opprimer»<sup class="footnote">5</sup>.</p>
+    <p><em>ⲁⲓⲁⲣⲉϩ ⲉⲣⲟⲓ ⲉ ϣⲧⲉⲙⲭⲁ ϩⲗⲓ ⲛ̀ϭⲣⲟϥ</em> «j'ai veillé sur moi pour ne donner aucun scandale»<sup class="footnote">6</sup>.</p>
+    <p>Il est un troisième infinitif qu'on pourrait appeler <i>potentiel</i>; il se forme en plaçant <em>ϣ-</em> «pouvoir» devant l'infinitif simple ou causatif: <em>ϣⲃⲱⲗ</em> «pouvoir délier», <em>ϣⲑⲣⲉ- ⲃⲱⲗ</em> «pouvoir faire délier». Il est en réalité composé de deux verbes, mais dont le premier <em>ϣ-</em> ne s'emploie que dans ce cas particulier. Lorsque le second verbe commence par <em>ⲥ</em>, cette lettre disparaît parfois après le <em>ϣ</em>: <em>ϣⲁϫⲓ</em> pour <em>ϣⲥⲁϫⲓ</em> «pouvoir dire» qui est d'ailleurs la forme ordinaire.</p>
+    <p class="footnote">1. Ps. 45, 4.</p>
+    <p class="footnote">2. Ex. 9, 12.</p>
+    <p class="footnote">3. Pr. 13, 6.</p>
+    <p class="footnote">4. Gen. 17, 20.</p>
+    <p class="footnote">5. Gen. 21, 23.</p>
+    <p class="footnote">6. Kef. 418.</p>
+    <p>Cet infinitif est d'un usage fréquent; il peut se rencontrer dans tous les verbes et à tous les temps:</p>
+    <p><em>ⲙ̀ⲡⲁϥϣⲛⲁϩⲙⲉϥ ⲉⲃⲟⲗ ϧⲉⲛ ⲟⲩⲡⲟⲗⲉⲙⲟⲥ</em> «il ne peut se sauver de la guerre»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲥⲉⲛⲁϣⲧⲱⲟⲩⲛⲟⲩ ⲙ̀ⲙⲁⲩⲁⲧⲟⲩ</em> «ils pourront se lever d'eux-mêmes»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲟⲩⲣⲱⲙⲓ ⲙ̀ⲃⲉⲗⲗⲉ ⲛ̀ⲛⲟⲩϣⲑⲣⲉϥⲛⲁⲩ ⲙ̀ⲃⲟⲗ ⲟⲩⲣⲱⲙⲓ ⲉϥϧⲉⲛ ⲟⲩⲁⲛⲁⲅⲕⲏ ⲛ̀ⲛⲟⲩϣⲛⲁϩⲙⲉϥ</em> «ils ne pourront rendre la vue à l'aveugle, ils ne pourront délivrer l'homme de la nécessité»<sup class="footnote">3</sup>.</p>
+    <p>A ce genre d'infinitif appartient le verbe si fréquent, <em>ϣϫⲉⲙϫⲟⲙ</em> «pouvoir», composé de <em>ϣ-ϫⲉⲙ-</em> «trouver» (231) et <em>ϫⲟⲙ</em> «force». <em>ϣ</em> s'unit aussi au substantif <em>ϫⲟⲙ</em> dans les expressions de cette sorte: <em>ⲙ̀ⲙⲟⲛ ϣϫⲟⲙ ⲛⲏⲓ</em> «je n'ai pas le pouvoir».</p>
+    <p>2. Emploi de l'infinitif.</p>
+    <p>De même qu'en français, l'infinitif de tous les verbes coptes peut s'employer, avec ou sans son régime, comme sujet ou comme complément direct et indirect dans une proposition.</p>
+    <p><i>1. Infinitif sujet.</i></p>
+    <p>Les propositions coptes qui ont un infinitif comme sujet réel sont tout à fait semblables aux propositions françaises de même genre.</p>
+    <p class="footnote">1. Dan. 6, 14.</p>
+    <p class="footnote">2. Ib. 26.</p>
+    <p class="footnote">3. Ib. 36.</p>
+    <p>L'infinitif précédé de <em>ⲉ</em> (en français <i>de</i>, <i>à</i>) vient toujours après l'attribut:</p>
+    <p><em>ⲁⲛⲟⲕ ϫⲉ ⲟⲩⲁⲅⲁⲑⲟⲛ ⲛⲏⲓ ⲡⲉ ⲉ-ⲧⲟⲙ-ⲧ ⲉ ⲫϯ</em> «il est bon pour moi d'adhérer à Dieu»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲟⲩⲟⲛⲧⲏⲓ ⲉ-ⲥⲁϫⲓ</em> «j'ai à parler»<sup class="footnote">2</sup>.</p>
+    <p>Cette tournure s'emploie surtout avec le verbe <em>ⲥϣⲉ</em> «il faut» et les verbes conjugués impersonnellement; dans ce cas on emploie <em>ⲛ̀</em> quand l'infinitif, qui est sujet réel, suit immédiatement le verbe, <em>ⲉ</em> quand il en est séparé:</p>
+    <p><em>ⲡⲉⲧⲥϣⲉ ⲛ̀-ⲁⲓϥ ⲁⲛ</em> «ce qu'il ne faut pas faire»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲥϣⲉ ⲛⲁⲛ ⲉ-ϯϩⲱϯ ⲙ̀ⲡⲟⲩⲣⲟ</em> «il nous faut payer le tribut au roi»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲛⲁⲛⲉⲥ ⲁⲛ ⲉⲑⲣⲉ ⲡⲓⲣⲱⲙⲓ ϣⲱⲡⲓ ⲙ̀ⲙⲁⲩⲁⲧϥ</em> «il n'est pas bon que l'homme soit tout seul»<sup class="footnote">5</sup>.</p>
+    <p><i>2. Infinitif complément.</i></p>
+    <p>1. Comme complément direct, l'infinitif se trouve quelquefois uni, sans particule, à la forme abrégée des verbes:</p>
+    <p><em>ⲁⲩⲙⲉⲛⲣⲉ ⲕⲓⲙ ⲛ̀ⲛⲟⲩⲫⲁⲧ</em> «ils ont aimé remuer leurs pieds»<sup class="footnote">6</sup>.</p>
+    <p>2. En dehors de ce cas, assez rare d'ailleurs, l'infinitif, qu'il soit complément direct ou autre, prend toujours une préposition, en général <em>ⲛ̀</em> ou <em>ⲉ</em>.</p>
+    <p class="footnote">1. Ps. 72, 28.</p>
+    <p class="footnote">2. Gen. 18, 31.</p>
+    <p class="footnote">3. Mt. 12, 2.</p>
+    <p class="footnote">4. Luc 20, 22.</p>
+    <p class="footnote">5. Gen. 2, 18.</p>
+    <p class="footnote">6. Jér. 14, 10.</p>
   </div>
 </div>
 	</body>
