--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3779,6 +3779,116 @@ A l'indicatif présent:</p>
     <p class="footnote">4. Luc 20, 22.</p>
     <p class="footnote">5. Gen. 2, 18.</p>
     <p class="footnote">6. Jér. 14, 10.</p>
+    <p>a. Infinitif complément avec <em>ⲛ̀</em>.</p>
+    <p><em>ⲛ̀</em> ne s'emploie qu'avec l'infinitif simple lorsqu'il suit <i>immédiatement</i> le mot dont il dépend.</p>
+    <p>1. Comme complément direct:</p>
+    <p><em>ⲧⲉⲧⲉⲛⲥⲱⲟⲩⲛ ⲛ̀ⲉⲣⲇⲟⲕⲓⲙⲁⲍⲓⲛ</em> «vous savez éprouver»<sup class="footnote">1</sup>.</p>
+    <p>2. Comme complément circonstantiel de manière:</p>
+    <p><em>ⲁϥⲉⲣϩⲏⲧⲥ ⲛ̀ⲥⲁϫⲓ</em> «il commença à parler»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲛⲁϥⲛⲏⲟⲩ ⲛ̀-ⲁϣⲁⲓ ⲡⲉ</em> «il allait en croissant»<sup class="footnote">3</sup>.</p>
+    <p>3. Comme complément déterminatif:</p>
+    <p><em>ⲡⲥⲏⲟⲩ ⲛ̀-ϯ</em> «le temps de donner»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲙ̀ⲡⲟⲩϣϫⲉⲙϫⲟⲙ ⲛ̀-ⲟϩⲓ</em> «ils ne purent rester»<sup class="footnote">5</sup>.</p>
+    <p>4. Après les verbes qui signifient «être facile, être difficile, être digne de»:</p>
+    <p><em>ⲙⲟⲧⲉⲛ ⲛ̀-ϫⲉⲙ-ϥ</em> «facile à trouver»<sup class="footnote">6</sup>.</p>
+    <p><em>ϧⲟⲥⲓ ⲛ̀-ϫⲉⲙ-ⲟⲩ</em> «difficiles à trouver»<sup class="footnote">7</sup>.</p>
+    <p><em>ⲁⲣⲓⲧⲉⲛ ⲛ̀ⲉⲙⲡϣⲁ ⲛ̀ϫⲟⲥ</em> «rends-nous dignes de dire»<sup class="footnote">8</sup>.</p>
+    <p>Dans tous ces cas, lorsque l'infinitif est <i>séparé</i> du mot dont il dépend, on emploie <em>ⲉ</em>.</p>
+    <p>b. Infinitif complément avec <em>ⲉ</em>.</p>
+    <p>Avec <em>ⲉ</em> on peut employer l'infinitif <i>simple</i> ou l'infinitif <i>causatif</i>.</p>
+    <p>L'infinitif causatif exprime le sujet; on l'emploie donc lorsque le sujet de l'infinitif doit être exprimé, c.-à-d. lorsqu'il est différent de celui du verbe principal ou même lorsqu'il n'est pas différent, mais qu'on veut le faire ressortir.</p>
+    <p class="footnote">1. Luc 12, 56.</p>
+    <p class="footnote">2. Luc 20, 9.</p>
+    <p class="footnote">3. Act. 12, 24.</p>
+    <p class="footnote">4. Th. 154.</p>
+    <p class="footnote">5. Ex. 12, 39.</p>
+    <p class="footnote">6. OSE. 17.</p>
+    <p class="footnote">7. OSE. 17.</p>
+    <p class="footnote">8. Th. 156.</p>
+    <p>Il faut remarquer, dans ce cas, que l'infinitif causatif n'a plus son sens propre et se traduit comme l'infinitif simple.</p>
+    <p>L'infinitif simple ou causatif s'emploie avec <em>ⲉ</em>:</p>
+    <p>1. Comme complément direct même là où l'on pourrait employer <em>ⲛ̀</em>, mais spécialement après les verbes qui signifient «vouloir, désirer, demander, ordonner, jurer, laisser».</p>
+    <p><em>ⲧⲉⲧⲉⲛⲥⲱⲟⲩⲛ ⲉ-ϯ</em> «vous savez donner»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁϥⲟⲩⲱϣ ⲉ-ⲓ̀</em> «il voulut venir»<sup class="footnote">2</sup>.</p>
+    <p><em>ϯⲟⲩⲱϣ ⲉⲑⲣⲓⲙⲟϣⲓ ⲛ̀ⲥⲁ ⲡⲓⲑⲙⲏⲓ</em> «je veux marcher sur les traces du juste»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲁⲓⲉⲣⲉⲡⲓⲑⲩⲙⲓⲛ ⲉ-ⲟⲩⲱⲙ</em> «j'ai désiré manger»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲕⲉⲣⲉⲧⲓⲛ ⲉ-ⲥⲱ</em> «tu demandes à boire»<sup class="footnote">5</sup>.</p>
+    <p><em>ⲁϥϩⲟⲛϩⲉⲛ ⲉ-ϣⲧⲉⲙϫⲉ ⲫⲁⲓ ⲛ̀ϩⲗⲓ</em> «il ordonna de ne le dire à personne»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲁϥⲱⲣⲕ ⲉ-ϯ ⲛⲁⲕ ⲙ̀ⲡⲓⲕⲁϩⲓ</em> «il a juré de te donner la terre»<sup class="footnote">7</sup>.</p>
+    <p><em>ⲛ̀ⲛⲉϥⲭⲁ ⲡⲓⲣⲉϥⲧⲁⲕⲟ ⲉ-ⲓ̀ ⲉϧⲟⲩⲛ</em> «il ne laissera pas entrer le destructeur»<sup class="footnote">8</sup>.</p>
+    <p>2. Comme complément circonstantiel pour marquer la fin, le but, l'intention:</p>
+    <p><em>ⲉϥⲉⲥⲓⲛⲓ ⲛ̀ϫⲉ ⲡϭⲟⲓⲥ ⲉ ϣⲁⲣⲓ ⲉ ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ</em> «le Seigneur passera pour frapper les Egyptiens»<sup class="footnote">9</sup>.</p>
+    <p class="footnote">1. Luc 11, 13.</p>
+    <p class="footnote">2. Jean 1, 44.</p>
+    <p class="footnote">3. OSE. 8.</p>
+    <p class="footnote">4. Luc 22, 15.</p>
+    <p class="footnote">5. Jean 4, 9.</p>
+    <p class="footnote">6. Luc 9, 21.</p>
+    <p class="footnote">7. Ex. 13, 5.</p>
+    <p class="footnote">8. Ex. 12, 23.</p>
+    <p class="footnote">9. Ex. 12, 23.</p>
+    <p><em>ⲁⲩϧⲱⲛⲧ ⲉ ⲕⲁϣ ⲡⲓⲣⲟ</em> «ils approchèrent pour briser la porte»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁϥⲧⲁⲟⲩⲟⲛ ⲛ̀ϫⲉ ⲡϭⲟⲓⲥ ⲉ ϥⲱϯ ⲛ̀ⲧⲁⲓⲃⲁⲕⲓ ⲉⲃⲟⲗ</em> «le Seigneur nous a envoyés pour raser cette ville»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲙ̀ⲙⲟⲛ ϣϫⲟⲙ ⲛⲏⲓ ⲉ ⲛⲁϩⲙⲉⲧ ⲉ ⲡⲧⲱⲟⲩ</em> «je ne puis me sauver à la montagne»<sup class="footnote">3</sup>.</p>
+    <p>c. Infinitif complément avec d'autres prépositions.</p>
+    <p>L'infinitif, complément circonstantiel, peut encore recevoir d'autrès prépositions: telles sont <em>ⲛ̀ⲥⲁ</em> et <em>ⲙⲉⲛⲉⲛⲥⲁ</em>.</p>
+    <p>Après <em>ⲛ̀ⲥⲁ</em> on emploie l'infinitif <i>simple</i>:</p>
+    <p><em>ⲛⲁϥⲕⲱϯ ⲛ̀ⲥⲁ ⲧⲁⲕⲟ ⲙ̀ⲙⲱⲩⲥⲏⲥ</em> «il cherchait à perdre Moïse»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲉⲩⲕⲱϯ ⲛ̀ⲥⲁ ⲥⲁϫⲓ</em> «ils demandent à parler»<sup class="footnote">5</sup>.</p>
+    <p>Après <em>ⲙⲉⲛⲉⲛⲥⲁ</em> on emploie l'infinitif <i>causatif</i>:</p>
+    <p><em>ⲙⲉⲛⲉⲛⲥⲁ ⲑⲣⲉϥⲉⲣϧⲉⲗⲗⲟ</em> «lorsqu'il eut vieilli»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲙⲉⲛⲉⲛⲥⲁ ⲑⲣⲉ ⲡϭⲟⲓⲥ ϣⲁⲣⲓ ⲉ ⲫⲓⲁⲣⲟ ⲛ̀ⲭⲏⲙⲓ</em> «après que le Seigneur eut frappé le fleuve d'Egypte»<sup class="footnote">7</sup>.</p>
+    <p>VI. Substantif Verbal.</p>
+    <p><i>1. Formation.</i></p>
+    <p>Le substantif verbal (<em>مصدر</em>) se forme de deux manières:</p>
+    <p>1. Au moyen de l'infinitif <i>simple</i> lui-même:</p>
+    <p><em>ⲡⲓ-ⲃⲱⲗ</em> «l'action de délier».</p>
+    <p>2. Au moyen de <em>ϫⲓⲛ</em> et de l'infinitif <i>simple</i> ou <i>causatif</i>.</p>
+    <p>L'infinitif causatif est toujours à l'état construit ou pronominal: <em>ⲡϫⲓⲛⲑⲣⲉ- ⲃⲱⲗ</em>, <em>ⲡϫⲓⲛⲑⲣ⸗ ⲃⲱⲗ</em>.</p>
+    <p class="footnote">1. Gen. 19, 9.</p>
+    <p class="footnote">2. Gen. 19, 13.</p>
+    <p class="footnote">3. Gen. 19, 19.</p>
+    <p class="footnote">4. Ex. 2, 15.</p>
+    <p class="footnote">5. Mt. 12, 46.</p>
+    <p class="footnote">6. Gen. 24, 36.</p>
+    <p class="footnote">7. Ex. 7, 25.</p>
+    <p>Pour la suffixation, voir 255.</p>
+    <p>L'infinitif simple donne avec <em>ϫⲓⲛ</em> deux formes:</p>
+    <p>1. une forme qui n'exprime pas le sujet: <em>ⲡϫⲓⲛ-ⲃⲱⲗ</em>.</p>
+    <p>2. une autre forme toujours accompagnée du sujet: <em>ⲡϫⲓⲛⲧⲉ- ⲃⲱⲗ</em>, <em>ⲡϫⲓⲛⲧ⸗ ⲃⲱⲗ</em>.</p>
+    <p>Avec les suffixes:</p>
+    <table>
+      <tr>
+        <th>Sg.</th><th></th><th>Pl.</th><th></th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ⲡϫⲓⲛⲧⲁ</em></td><td>1.</td><td><em>ⲡϫⲓⲛⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ⲡϫⲓⲛⲧⲉⲕ</em></td><td>2.</td><td><em>ⲡϫⲓⲛⲧⲉⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲡϫⲓⲛⲧⲉ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ⲡϫⲓⲛⲧⲉϥ</em></td><td>3.</td><td><em>ⲡϫⲓⲛⲧⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲡϫⲓⲛⲧⲉⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p>Devant un nom: <em>ⲡϫⲓⲛⲧⲉ-</em></p>
+    <p><i>2. Syntaxe.</i></p>
+    <p>De même que le <i>maṣdar</i> arabe, le substantif verbal copte, dans ses quatre formes différentes, peut avoir un complément direct:</p>
+    <p><em>ⲫⲛⲁϩⲙⲉ-ⲧ</em> «mon salut (<i>litt.</i> le sauver moi)»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲟⲩ-ⲥⲟⲩⲉⲛ ⲫϯ</em> «la connaissance de Dieu (<i>litt.</i> le connaître Dieu)»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲡϫⲓⲛ-ⲑⲣⲉϥ-ϩⲉϫϩⲱϫ-ⲧ</em> «l'oppression qu'il exerce sur moi»<sup class="footnote">3</sup>.</p>
+    <p>a. Substantif verbal avec la forme de l'infinitif simple <em>ⲡⲓ-ⲃⲱⲗ</em>.</p>
+    <p>Sous cette forme le substantif verbal, seul ou avec son complément, peut remplir toutes les fonctions d'un substantif ordinaire, c.-à-d. être sujet ou régime dans une proposition; il prend l'article défini ou ses dérivés:</p>
+    <p class="footnote">1. Th. 8.</p>
+    <p class="footnote">2. Pr. 2, 5.</p>
+    <p class="footnote">3. Ps. 41, 10.</p>
+    
   </div>
 </div>
 	</body>
