--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3888,6 +3888,22 @@ A l'indicatif présent:</p>
     <p class="footnote">1. Th. 8.</p>
     <p class="footnote">2. Pr. 2, 5.</p>
     <p class="footnote">3. Ps. 41, 10.</p>
+    <p><em>ⲡⲁ-ⲁⲙⲟⲛⲓ ⲛ̀ⲧⲟⲧ ⲟⲩ-ⲉⲃⲟⲗ ϩⲓⲧⲟⲧϥ ⲡⲉ</em> «ma patience vient de lui (<i>litt.</i> mon contenir moi-même)»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁⲩⲟⲩⲃⲁϣ ⲉ ⲡ-ⲟⲥϧ-ⲟⲩ</em> «ils ont blanchi pour la moisson (<i>litt.</i> pour le moissonner eux)»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲁⲥⲛⲁⲩ ⲛ̀ϫⲉ ϯⲥϩⲓⲙⲓ ϫⲉ ⲛⲁⲛⲉϥ ⲡⲓϣϣⲏⲛ ⲉ ⲫ-ⲟⲩⲱⲙ</em> «la femme vit que le fruit était bon à manger»<sup class="footnote">3</sup>.</p>
+    <p>Il est certains thèmes verbaux qui sont employés comme de simples substantifs, soit en gardant la forme de l'infinitif absolu: <em>ⲱⲛϧ</em> «vivre», <em>ⲡⲓ-ⲱⲛϧ</em> «la vie»; <em>ⲥⲁϫⲓ</em> «parler», <em>ⲡⲓ-ⲥⲁϫⲓ</em> «la parole»; soit en prenant celle du qualitatif: <em>ϣⲟⲛⲧ</em> «querelle» de <em>ϣⲱⲛⲧ</em>, <i>qual.</i> <em>ϣⲟⲛⲧ</em> «entrelacer»; <em>ⲣⲟⲕϩ</em> «bois de chauffage» de <em>ⲣⲱⲕϩ</em>, <i>qual.</i> <em>ⲣⲟⲕϩ</em> «brûler»; <em>ⲫⲟⲧϩ</em> «ouvrage de sculpture» de <em>ⲫⲱⲧϩ</em>, <i>qual.</i> <em>ⲫⲟⲧϩ</em> «sculpter»; <em>ϫⲉⲗϫⲱⲗ</em> «dessèchement»<sup class="footnote">4</sup> de <em>ϫⲟⲗϫⲉⲗ</em> «faire sécher» dont le qualitatif devrait être <em>ϫⲉⲗϫⲱⲗ</em> (cf. A B, p. 39).</p>
+    <p>Le substantif verbal s'emploie avec l'article indéfini <em>ⲟⲩ</em> dans deux cas:</p>
+    <p>1. Après la préposition <em>ϧⲉⲛ</em> pour former une locution adverbiale:</p>
+    <p><em>ϧⲉⲛ ⲟⲩⲥⲱⲟⲩⲧⲉⲛ</em> «avec droiture, directement»,</p>
+    <p><em>ϧⲉⲛ ⲟⲩϫⲱⲕ ⲉⲃⲟⲗ</em> «entièrement»,</p>
+    <p><em>ϧⲉⲛ ⲟⲩϩⲱⲡ</em> «en secret».</p>
+    <p>2. Après le verbe lui-même pour en appuyer le sens, comme le complément absolu arabe (<em>مغمول مُطْلَق</em>):</p>
+    <p><em>ⲧⲉⲧⲉⲛⲛⲁⲙⲟⲩ ϧⲉⲛ ⲟⲩⲙⲟⲩ</em> <em>موتَا تموتون</em> «vous mourrez de mort»<sup class="footnote">5</sup>.</p>
+    <p class="footnote">1. Ps. 61, 6.</p>
+    <p class="footnote">2. Jean 4, 35.</p>
+    <p class="footnote">3. Gen. 3, 6.</p>
+    <p class="footnote">4. Nomb. 11, 32.</p>
+    <p class="footnote">5. Gen. 2, 17.</p>
     
   </div>
 </div>
