--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3904,7 +3904,38 @@ A l'indicatif présent:</p>
     <p class="footnote">3. Gen. 3, 6.</p>
     <p class="footnote">4. Nomb. 11, 32.</p>
     <p class="footnote">5. Gen. 2, 17.</p>
-    
+    <p><em>ⲁϥⲣⲓⲙⲓ ϧⲉⲛ ⲟⲩⲣⲓⲙⲓ ⲉϥⲉⲛϣⲁϣⲓ</em> <em>بكى بكىاءً مرًّا</em> «il pleura amèrement»<sup class="footnote">1</sup>.</p>
+    <p><em>ϧⲉⲛ ⲟⲩⲛⲟϩⲉⲙ ⲛⲟϩⲉⲙ ⲛ̀ⲧⲉⲕⲯⲩⲭⲏ</em> «sauve-toi toi-même»<sup class="footnote">2</sup>.</p>
+    <p>Lorsque le substantif verbal est complément circonstantiel, on emploie surtout la forme avec <em>ϫⲓⲛ</em>.</p>
+    <p>b. Substantif verbal avec <em>ϫⲓⲛ</em>.</p>
+    <p>Le substantif verbal formé de <em>ϫⲓⲛ</em> ne peut remplir que la fonction de complément circonstantiel; il est donc toujours précédé d'une préposition.</p>
+    <p>Quant à la différence entre les trois formes <em>ⲡϫⲓⲛ-ⲃⲱⲗ</em>, <em>ⲡϫⲓⲛⲧⲉ- ⲃⲱⲗ</em>, <em>ⲡϫⲓⲛⲑⲣⲉ- ⲃⲱⲗ</em>, on peut faire les remarques suivantes.</p>
+    <p>1. <em>ⲡϫⲓⲛ-ⲃⲱⲗ</em>.</p>
+    <p>Cette forme est employée:</p>
+    <p>1. Lorsque le sujet auquel est attribuée l'action du substantif verbal est le même que celui du verbe principal:</p>
+    <p><em>ⲛⲁⲩⲕⲱϯ ⲛ̀ⲥⲁ ⲟⲩⲙⲉⲧⲙⲉⲑⲣⲉ ϧⲁ ⲓ︤ⲏ︦ⲥ︥ ⲉⲡϫⲓⲛ-ϧⲟⲑⲃⲉϥ</em> «ils cherchaient un témoignage contre Jésus pour le mettre à mort»<sup class="footnote">3</sup>.</p>
+    <p>2. Lorsque le substantif verbal n'a pas un sujet déterminé et qu'il représente plutôt un nom suivi d'un complément déterminatif:</p>
+    <p><em>ⲁⲥϩⲓⲟⲩⲓ ⲙ̀ⲡⲁⲓⲥⲟϫⲉⲛ ⲉ ⲡⲁⲥⲱⲙⲁ ⲉ-ⲡϫⲓⲛ-ⲕⲟⲥⲧ</em> «elle a répandu ce parfum sur mon corps pour ma sépulture»<sup class="footnote">4</sup>.</p>
+    <p class="footnote">1. Mt. 26, 75.</p>
+    <p class="footnote">2. Gen. 19, 17.</p>
+    <p class="footnote">3. Mc. 14, 55.</p>
+    <p class="footnote">4. Mt. 26, 12.</p>
+    <p><em>ϩⲏⲡⲡⲉ ⲓⲥ ⲁⲇⲁⲙ ⲁϥⲉⲣ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲁⲓ ⲉⲃⲟⲗ ⲙ̀ⲙⲟⲛ ⲉ-ⲡϫⲓⲛⲥⲟⲩⲉⲛ ⲟⲩⲡⲉⲑⲛⲁⲛⲉϥ ⲛⲉⲙ ⲟⲩⲡⲉⲧϩⲱⲟⲩ</em> «voici qu'Adam est devenu semblable à l'un de nous pour la connaissance du bien et du mal»<sup class="footnote">1</sup>.</p>
+    <p>3. A l'exclusion des deux autres, cette forme est généralement employée sans complément comme un simple substantif; elle peut alors recevoir l'adjectif possessif et l'article du féminin (143):</p>
+    <p><em>ⲉϫⲉⲛ ⲡⲉϥⲉⲙⲓ ⲛⲉⲙ ⲡⲉϥ-ϫⲓⲛ-ⲉⲣⲟⲩⲱ</em> «au sujet de son savoir et de ses réponses»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲉⲑⲃⲉ ⲧⲉϫⲓⲛⲥⲁϫⲓ</em> «à cause de ta parole»<sup class="footnote">3</sup>.</p>
+    <p><em>ϯ-ϫⲓⲛ-ⲥⲁϫⲓ</em> «la conversation»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲧⲉϥϫⲓⲛⲉⲣϩⲱⲃ</em> «sa manière d'agir»<sup class="footnote">5</sup>.</p>
+    <p>2. <em>ⲡϫⲓⲛⲧⲉ- ⲃⲱⲗ</em>, <em>ⲡϫⲓⲛⲑⲣⲉ- ⲃⲱⲗ</em>.</p>
+    <p>En tenant compte du sens primitif, <em>ⲡϫⲓⲛⲑⲣⲉ-</em> ne devrait s'employer que dans le sens causatif, et <em>ⲡϫⲓⲛⲧⲉ-</em> dans le sens ordinaire; mais, dans l'état actuel de la langue, il n'y a entre ces deux formes aucune différence notable de sens. Il importe seulement de remarquer que <em>ⲡϫⲓⲛⲑⲣⲉ-</em> est beaucoup plus employé que <em>ⲡϫⲓⲛⲧⲉ-</em>.</p>
+    <p>Par opposition à <em>ⲡϫⲓⲛ-ⲃⲱⲗ</em>, ces deux formes s'emploient pour exprimer le sujet du substantif verbal quand il est différent de celui du verbe principal, ou qu'on veut le mettre en évidence. Elles vont surtout avec les deux prépositions <em>ⲉ</em> et <em>ϧⲉⲛ</em>:</p>
+    <p><em>ⲁⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲟⲗϥ ⲉ ⲡϣⲁϥⲉ ⲉ ⲡϫⲓⲛⲧⲉ ⲡⲓⲇⲓⲁⲃⲟⲗⲟⲥ ⲉⲣⲡⲓⲣⲁⲍⲓⲛ ⲙ̀ⲙⲟϥ</em> «l'Esprit le conduisit au désert pour qu'il fût tenté par le diable»<sup class="footnote">6</sup>.</p>
+    <p class="footnote">1. Gen. 3, 22.</p>
+    <p class="footnote">2. Luc 2, 47.</p>
+    <p class="footnote">3. Jean 4, 42.</p>
+    <p class="footnote">4. G, 88, 7.</p>
+    <p class="footnote">5. D. 539.</p>
+    <p class="footnote">6. Mt. 4, 1.</p>
   </div>
 </div>
 	</body>
