--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3936,6 +3936,23 @@ A l'indicatif présent:</p>
     <p class="footnote">4. G, 88, 7.</p>
     <p class="footnote">5. D. 539.</p>
     <p class="footnote">6. Mt. 4, 1.</p>
+    <p>Je vous ai tirés d'Egypte <em>ⲉ ⲡϫⲓⲛⲧⲉⲧⲉⲛϣⲱⲡⲓ ⲛⲏⲓ</em> «pour que vous soyez à moi»<sup class="footnote">1</sup>.</p>
+    <p>Avec <em>ⲡϫⲓⲛⲧⲉ-</em>, <em>ϧⲉⲛ</em> indique une action qui se fait en même temps que celle du verbe principal et se traduit par «lorsque, pendant que»:</p>
+    <p><em>ⲥⲱⲧⲉⲙ ⲫϯ ⲉ ⲧⲁⲡⲣⲟⲥⲉⲩⲭⲏ ϧⲉⲛ ⲡϫⲓⲛⲧⲁⲧⲱⲃϩ</em> «ô Dieu, écoute ma demande lorsque je prie»<sup class="footnote">2</sup>.</p>
+    <p><em>ϧⲉⲛ ⲡϫⲓⲛⲧⲉⲕⲱⲥϧ</em> «lorsque tu moissonnes»<sup class="footnote">3</sup>.</p>
+    <p>Avec <em>ⲡϫⲓⲛⲑⲣⲉ-</em>, <em>ϧⲉⲛ</em> indique généralement une action qui a précédé immédiatement celle du verbe principal; plus rarement, une action simultanée:</p>
+    <p><em>ⲁⲥϣⲱⲡⲓ ⲇⲉ ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉϥⲥⲱⲧⲉⲙ ⲛ̀ϫⲉ ⲡⲁⲗⲟⲩ ⲛ̀ⲁⲃⲣⲁⲁⲙ ⲉ ⲡⲁⲓⲥⲁϫⲓ ⲁϥⲟⲩⲱϣⲧ ⲙ̀ⲡϭⲟⲓⲥ</em> «il arriva que, lorsque le serviteur d'Abraham eut entendu ces paroles, il adora le Seigneur»<sup class="footnote">4</sup>.</p>
+    <p><em>ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉ ⲡⲓⲥⲟⲛ ⲥⲱⲧⲉⲙ ⲉⲛⲁⲓ ⲁϥⲣⲁϣⲓ ⲉⲙⲁϣⲱ</em> «lorsque le frère eut entendu ces choses, il se réjouit beaucoup»<sup class="footnote">5</sup>.</p>
+    <p><em>ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲟⲩϩⲉϫϩⲉϫ-ⲑⲏⲛⲟⲩ</em> «lorsqu'ils vous oppriment»<sup class="footnote">6</sup>.</p>
+    <p>Cette tournure est assez fréquente dans les narrations, au commencement des phrases:</p>
+    <p><em>ⲟⲩⲟϩ ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉⲛⲧⲁϩⲟ ⲙ̀ⲡⲓⲛⲁϩϯ ⲉⲣⲁⲧϥ … ⲁ ⲡⲟⲩⲣⲟ ⲭⲁⲛ ⲉⲃⲟⲗ</em> «lorsque nous eûmes établi la foi, le roi nous laissa partir»<sup class="footnote">7</sup>.</p>
+    <p class="footnote">1. Lév. 20, 26.</p>
+    <p class="footnote">2. Ps. 63, 1.</p>
+    <p class="footnote">3. Lév. 23, 22.</p>
+    <p class="footnote">4. Gen. 24, 52.</p>
+    <p class="footnote">5. Kef. 353.</p>
+    <p class="footnote">6. Lév. 26, 26.</p>
+    <p class="footnote">7. Zoega 29.</p>
   </div>
 </div>
 	</body>
