--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3953,6 +3953,123 @@ A l'indicatif présent:</p>
     <p class="footnote">5. Kef. 353.</p>
     <p class="footnote">6. Lév. 26, 26.</p>
     <p class="footnote">7. Zoega 29.</p>
+    <p>VII. Passif du Verbe.</p>
+    <p>Le verbe copte n'a point de forme particulière pour le passif. On y supplée de différentes manières:</p>
+    <p>1. Le moyen général et ordinaire d'exprimer le passif consiste à employer la 3<sup>e</sup> pers. du pluriel actif:</p>
+    <p><em>ⲉⲩⲉⲙⲟⲩϯ ⲉⲣⲟⲕ ϫⲉ ⲕⲉⲫⲁ</em> «tu seras appelé (ils t'appelleront) Céphas»<sup class="footnote">1</sup>.</p>
+    <p>Le sujet apparent du verbe devient régime et le sujet réel est introduit par <em>ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ</em>:</p>
+    <p><em>ⲟⲩ-ⲣⲱⲙⲓ ⲉ ⲁⲩⲟⲩⲟⲣⲡϥ ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ ⲫϯ</em> «un homme qui était envoyé de Dieu»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲟⲩ-ⲕⲁϣ ⲉⲩⲕⲓⲙ ⲉⲣⲟϥ ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ ⲟⲩ-ⲑⲏⲟⲩ</em> «un roseau agité par le vent»<sup class="footnote">3</sup>.</p>
+    <p>2. Quelques verbes forment leur passif au moyen du verbe préfixe <em>ϭⲓ-</em> «prendre»:</p>
+    <p><em>ϭⲓⲥⲙⲟⲩ</em> «être béni»;</p>
+    <p><em>ϭⲓⲱⲟⲩ</em> «être glorifié»;</p>
+    <p><em>ϭⲓⲟⲩⲱⲓⲛⲓ</em> «être illuminé»;</p>
+    <p><em>ϭⲓⲱⲙⲥ</em> «être baptisé».</p>
+    <p>L'infinitif des verbes transitifs peut en un certain sens exprimer le passif dont le sujet réel n'est pas mentionné (192).</p>
+    <p><em>ⲁⲩⲟⲩⲱⲛ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲟⲩ ⲧⲏⲣⲟⲩ ⲟⲩⲟϩ ⲛⲓⲥⲛⲁⲩϩ ⲧⲏⲣⲟⲩ ⲁⲩⲃⲱⲗ ⲉⲃⲟⲗ</em> «toutes les portes s'ouvrirent et tous les liens se délièrent»<sup class="footnote">4</sup>.</p>
+    <p>3. Le qualitatif de tous les verbes transitifs a le sens passif, mais il indique un état et non une action (200).</p>
+    <p><em>ϯϩⲉϫϩⲱϫ</em> «je suis oppressé», <em>ⲥⲥϧⲏⲟⲩⲧ</em> «il est écrit».</p>
+    <p class="footnote">1. Jean 1, 43.</p>
+    <p class="footnote">2. Jean 1, 6.</p>
+    <p class="footnote">3. Luc 7, 24.</p>
+    <p class="footnote">4. Act. 16, 26.</p>
+    <p>VIII. Complément Direct du Verbe.</p>
+    <p>La syntaxe du complément direct est différente selon que le verbe est à l'état <i>absolu</i>, à l'état <i>construit</i> ou à l'état <i>pronominal</i>.</p>
+    <p><i>1. Complément direct du verbe à l'état absolu.</i></p>
+    <p>Le complément direct de tout verbe à l'état absolu est précédé de <em>ⲛ̀</em> (<em>ⲙ̀</em> devant <em>ⲃ</em> <em>ⲙ</em> <em>ⲡ</em> <em>ⲫ</em> <em>ⲯ</em>):</p>
+    <p><em>ⲥⲉⲥⲱⲟⲩⲛ ⲁⲛ ⲛ̀ⲧⲥⲙⲏ ⲙ̀ⲡⲓϣⲉⲙⲙⲟ</em> «ils ne connaissent pas la voix de l'étranger»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲫⲓⲱⲧ ⲙⲉⲓ ⲙ̀ⲡϣⲏⲣⲓ</em> «le Père aime le Fils»<sup class="footnote">2</sup>.</p>
+    <p>Quand le complément est un pronom, on emploie <em>ⲙ̀ⲙⲟ⸗</em>:</p>
+    <p><em>ⲉϣⲱⲡ ⲧⲉⲧⲉⲛⲙⲉⲓ ⲙ̀ⲙⲟⲓ</em> «si vous m'aimez»<sup class="footnote">3</sup>.</p>
+    <p>Les verbes grecs actifs se construisent toujours de cette manière, car ils ne peuvent être ni à l'état construit ni à l'état pronominal:</p>
+    <p><em>ϩⲓⲛⲁ ⲛ̀ⲧⲉϥⲉⲣⲡⲓⲣⲁⲍⲓⲛ ⲙ̀ⲙⲱⲧⲉⲛ</em> «pour vous éprouver»<sup class="footnote">4</sup>.</p>
+    <p><i>Remarques.</i></p>
+    <p>1. Le verbe <em>ϫⲱ ϫⲟ⸗</em> «dire» exige toujours un nom ou un pronom pour complément direct; si la phrase n'en contient pas, on le remplace par le pronom neutre <em>ⲥ</em> avec <em>ϫⲟ⸗</em>, par <em>ⲙ̀ⲙⲟⲥ</em> avec <em>ϫⲱ</em>:</p>
+    <p><em>ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ</em> «disant»;</p>
+    <p><em>ⲁⲩϫⲟⲥ</em> «on a dit».</p>
+    <p>2. Lorsque le verbe <em>ⲭⲱ ⲭⲁ⸗</em> «laisser» et l'impératif <em>ⲙⲟⲓ ⲙⲏⲓ⸗</em> «accorde» ont pour régime toute une proposition, on emploie la forme neutre <em>ⲭⲁⲥ</em>, <em>ⲙⲏⲓⲥ</em>:</p>
+    <p class="footnote">1. Jean 10, 5.</p>
+    <p class="footnote">2. Jean 3, 35.</p>
+    <p class="footnote">3. Jean 14, 15.</p>
+    <p class="footnote">4. Ex. 20, 20.</p>
+    <p><em>ⲭⲁⲥ ⲛ̀ϣⲟⲣⲡ ⲛ̀ⲧⲟⲩⲥⲓ ⲛ̀ϫⲉ ⲛⲓϣⲏⲣⲓ</em> «laisse d'abord les enfants se rassasier»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲙⲏⲓⲥ ⲉⲑⲣⲟⲩϣⲱⲡⲓ ⲛⲁⲛ</em> «accorde qu'ils soient à nous»<sup class="footnote">2</sup>.</p>
+    <p>3. L'attribut du verbe <em>ϣⲱⲡⲓ</em> «être» est généralement précédé du qualitatif <em>ⲟⲓ</em> (218), au 3<sup>e</sup> présent; si c'est un verbe, il se met lui-même au 3<sup>e</sup> présent:</p>
+    <p><em>ϯⲛⲁϣⲱⲡⲓ ⲁⲛ ⲉⲓⲟⲓ ⲛ̀ⲁⲣⲭⲏⲅⲟⲥ</em> «je ne serai pas chef»<sup class="footnote">3</sup>.</p>
+    <p><em>ϩⲓⲛⲁ ⲛ̀ⲧⲉⲕϣⲱⲡⲓ ⲉⲕⲟⲓ ⲛ̀ⲛⲉⲃⲁϩⲓ</em> «afin que tu vives longtemps (<i>litt.</i> afin que tu sois possesseur d'âge)»<sup class="footnote">4</sup>.</p>
+    <p><em>ϣⲱⲡⲓ ⲉⲣⲉⲧⲉⲛⲥⲉⲃⲧⲱⲧ</em> «soyez prêts»<sup class="footnote">5</sup>.</p>
+    <p><em>ϯⲛⲁϣϣⲉ ⲉⲙⲁⲩ ⲁⲛ ⲛ̀ⲧⲁϣⲱⲡⲓ ⲉⲓⲣⲁϧⲧ ⲉϧⲣⲏⲓ ϩⲓ ⲡⲓⲙⲱⲓⲧ</em> «je n'irai pas là-bas de peur d'être étendu sur le chemin»<sup class="footnote">6</sup>.</p>
+    <p>4. Lorsque <em>ⲛ</em> se trouve devant l'article indéfini <em>ⲟⲩ</em>, on le redouble parfois et l'on obtient <em>ⲛ̀ⲛⲟⲩ-</em>, qu'il faut se garder de confondre avec l'adjectif possessif:</p>
+    <p><em>ⲛ̀ⲛⲟⲩϣⲛⲟϩⲉⲙ ⲛ̀ⲛⲟⲩⲣⲱⲙⲓ</em> «ils ne pourront délivrer un homme»<sup class="footnote">7</sup>.</p>
+    <p><i>2. Complément direct du verbe à l'état construit.</i></p>
+    <p>Le complément direct de tout verbe a l'état construit s'unit par lui-même et sans particule à son verbe:</p>
+    <p><em>ⲁ ⲫϯ ⲙⲉⲛⲣⲉ ⲡⲓⲕⲟⲥⲙⲟⲥ</em> «Dieu a aimé le monde»<sup class="footnote">8</sup>.</p>
+    <p><em>ⲁϥϫⲉ ⲛⲁⲓ</em> «il dit ces choses».</p>
+    <p class="footnote">1. Mc. 7, 27.</p>
+    <p class="footnote">2. Missel 83.</p>
+    <p class="footnote">3. Is. 3, 7.</p>
+    <p class="footnote">4. Ex. 20, 12.</p>
+    <p class="footnote">5. Ex. 19, 15.</p>
+    <p class="footnote">6. Kef. 357.</p>
+    <p class="footnote">7. Bar. 6, 35.</p>
+    <p class="footnote">8. Jean 3, 16.</p>
+    <p>Dans les manuscrits, le complément direct de la forme abrégée est souvent écrit avec le verbe, comme s'il ne formait avec lui qu'un seul mot composé.</p>
+    <p>Dans quelques livres, il est uni au verbe par un trait d'union.</p>
+    <p><i>3. Complément direct du verbe à l'état pronominal.</i></p>
+    <p>Dans ce cas, le complément étant toujours un pronom suffixe, sa syntaxe consiste à appliquer les règles de la suffixation.</p>
+    <p>Nous donnons d'abord deux modèles généraux qui conviennent au plus grand nombre des verbes.</p>
+    <p>Nous indiquons ensuite les particularités et exceptions.</p>
+    <p>Verbe terminé par les voyelles <em>ⲟ</em>, <em>ⲱ</em>.</p>
+    <table>
+      <tr>
+        <th>Sing.</th><th></th><th>Pl.</th><th></th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ⲧⲁⲙⲟⲓ</em></td><td>1.</td><td><em>ⲧⲁⲙⲟⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ⲧⲁⲙⲟⲕ</em></td><td>2.</td><td><em>ⲧⲁⲙⲱⲧⲉⲛ</em> ou <em>ⲧⲁⲙⲉ-ⲑⲏⲛⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲧⲁⲙⲟ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ⲧⲁⲙⲟϥ</em></td><td>3.</td><td><em>ⲧⲁⲙⲱⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲧⲁⲙⲟⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p>Verbe terminé par une cons.</p>
+    <table>
+      <tr>
+        <th>Sing.</th><th></th><th>Pl.</th><th></th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ⲃⲟⲗⲧ</em></td><td>1.</td><td><em>ⲃⲟⲗⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ⲃⲟⲗⲕ</em></td><td>2.</td><td><em>ⲃⲉⲗ-ⲑⲏⲛⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲃⲟⲗⲓ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ⲃⲟⲗϥ</em></td><td>3.</td><td><em>ⲃⲟⲗⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲃⲟⲗⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p>Règles et remarques.</p>
+    <p>I. La 1 sing. est en <em>ⲓ</em> après <em>ⲟ</em> <em>ⲱ</em>, en <em>ⲧ</em> après une consonne.</p>
+    <p>1. Les quelques verbes qui sont terminés en <em>ⲁ⸗</em> ou <em>ⲓ⸗</em> prennent <em>ⲧ</em>:</p>
+    <p><em>ⲭⲁ⸗ ⲭⲁⲧ</em>;</p>
+    <p><em>ⲁⲓ⸗ ⲁⲓⲧ</em><sup class="footnote">1</sup>;</p>
+    <p><em>ⲧⲏⲓ⸗ ⲧⲏⲓⲧ</em><sup class="footnote">2</sup>.</p>
+    <p>2. Lorsque l'infinitif est déjà terminé par un <em>ⲧ</em>, on n'ajoute pas toujours un autre <em>ⲧ</em>, mais il est toujours permis de l'ajouter.</p>
+    <p class="footnote">1. Br. 215.</p>
+    <p class="footnote">2. Ps. 26. 19.</p>
   </div>
 </div>
 	</body>
